--- a/yote_root/html/yote/unit_tests.html
+++ b/yote_root/html/yote/unit_tests.html
@@ -599,7 +599,7 @@
 </head>
 <body>
   <h1>Yote Unit Tests</h1>
-  <div id=tests></div>
-  <div id=results></div>
+  <div id="tests"></div>
+  <div id="results"></div>
 </body>
 </html>
